--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "express-jwt": "5.3.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
+    "glob": "^7.1.3",
     "jsonwebtoken": "7.4.3",
-    "glob": "^7.1.2",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.11",
     "mongoose": "5.0.12",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
@@ -33,8 +33,8 @@
     "validator": "^9.4.1"
   },
   "devDependencies": {
-    "mocha": "^5.1.1",
-    "should": "^13.2.1",
-    "supertest": "^3.0.0"
+    "mocha": "^5.2.0",
+    "should": "^13.2.3",
+    "supertest": "^3.3.0"
   }
 }
