--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodejs-server",
-  "version": "1.3.1",
+  "version": "1.4.2",
   "description": "mongoose express nodejs for server only",
   "main": "server.js",
   "scripts": {
@@ -10,10 +10,10 @@
   "keywords": [
     "nodejs-server"
   ],
-  "author": "sarayut.kungsaranuwat@gmail.com",
+  "author": "toonelicious@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^1.0.3",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
@@ -21,7 +21,7 @@
     "express-session": "^1.15.6",
     "glob": "^7.1.3",
     "jsonwebtoken": "7.4.3",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.5",
     "mongoose": "5.0.12",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
@@ -30,6 +30,7 @@
     "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "request": "^2.88.0",
     "validator": "^9.4.1"
   },
   "devDependencies": {
